<resources>
    <string name="app_name">TrackingApp</string>

    <string name="ble_not_supported">Your phone does not support Bluetooth Low Energy technology. Application will be closed! </string>
    <string name="bluetooth_not_supported">Your phone does not support Bluetooth technology. Application will be closed! </string>
    <string name="no_bluetooth_dialog_title_text">Bluetooth is off</string>
    <string name="no_bluetooth_dialog_text">You need Bluetooth to use this app. Switch on Bluetooth?</string>
    <string-array name="properties_array">
        <item>Broadcast</item>
        <item>Read</item>
        <item>Write no response</item>
        <item>Write</item>
        <item>Notify</item>
        <item>Indicate</item>
        <item>Signed write</item>
        <item>Extended props</item>
    </string-array>

    <string name="title_activity_device_register">Device Register</string>
    <string name="checkTabletRegistration">Please while check tablet registration</string>
    <string name="tabletRegistration">Please enter tablet name</string>
    <string name="tableWebServer">Please enter server url</string>
    <string name="register_button">Register your tablet</string>
    <string name="title_activity_settings_tabbed">SettingsTabbedActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>

    <string name="action_settings">Settings</string>
    <string name="register">register</string>
    <string name="upper_limit">Upper limit</string>
    <string name="select_an_instrument">Select an Instrument</string>
    <string name="model">Model</string>
    <string name="name">Name</string>
    <string name="notes">Notes</string>
    <string name="lower_limit">Lower limit</string>
    <string name="rf_value">RF Value</string>
    <string name="instrument">Instrument</string>
    <string name="general">General</string>
    <string name="tablet_info">Tablet Info</string>
    <string name="settings">Settings</string>
    <string name="txt_organization">Organization</string>
    <string name="txt_department">Department</string>
    <string name="txt_facility">Facility</string>
    <string name="preferred_wifi_setup">Preferred Wifi Setup</string>
    <string name="wifi_name">Wifi Name</string>
    <string name="password">Password</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="change_wifi_credential">Change Wifi Credential</string>
</resources>
