<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/back_item"
    android:padding="@dimen/dp10">

    <TextView
        android:id="@+id/tv_rfValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rf_value" />

    <EditText
        android:id="@+id/edt_rfValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_rfValue"
        android:maxLength="30"
        android:maxLines="1" />

    <LinearLayout
        android:id="@+id/model_name_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edt_rfValue"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:weightSum="2">

            <TextView
                android:id="@+id/tv_model"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/model" />

            <EditText
                android:id="@+id/edt_model"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:maxLines="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:weightSum="2">

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/name" />

            <EditText
                android:id="@+id/edt_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:maxLines="1" />
        </LinearLayout>
    </LinearLayout>


    <TextView
        android:id="@+id/tv_notes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/model_name_layout"
        android:text="@string/notes" />

    <EditText
        android:id="@+id/edt_notes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_notes"
        android:lines="3" />

    <LinearLayout
        android:id="@+id/limit_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edt_notes"
        android:orientation="horizontal"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:weightSum="2">

            <TextView
                android:id="@+id/tv_lowerLimit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/lower_limit" />

            <EditText
                android:id="@+id/edt_lowerLimit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:inputType="number"
                android:maxLength="3" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:weightSum="2">

            <TextView
                android:id="@+id/tv_upperLimit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/upper_limit" />

            <EditText
                android:id="@+id/edt_upperLimit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:inputType="number"
                android:maxLength="3" />
        </LinearLayout>

        <!--organization-->

    </LinearLayout>


    <!--start of organization-->
    <TextView
        android:id="@+id/tv_organization"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/limit_layout"
        android:text="@string/txt_organization" />

    <EditText
        android:id="@+id/edt_organization"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_organization"
        android:inputType="text"
        android:maxLines="1" />
    <!--end of organization-->

    <!--start of department and facility-->
    <LinearLayout
        android:id="@+id/depart_facility_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edt_organization"
        android:orientation="horizontal"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:weightSum="2">

            <TextView
                android:id="@+id/tv_department"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/txt_department"
                tools:ignore="NestedWeights" />

            <EditText
                android:id="@+id/edt_department"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:inputType="text"
                android:maxLines="1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:weightSum="2">

            <TextView
                android:id="@+id/tv_facility"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/txt_facility" />

            <EditText
                android:id="@+id/edt_facility"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:inputType="text"
                android:maxLines="1"
                />
        </LinearLayout>

        <!--organization-->

    </LinearLayout>

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/depart_facility_layout"
        android:layout_centerHorizontal="true"
        android:background="@color/colorAccent"
        android:text="@string/register"
        android:textColor="@color/clr_white" />


</RelativeLayout>