<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="280dp"
    app:cardUseCompatPadding="true"
    app:cardCornerRadius="8dp"
    android:layout_margin="16dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/preferred_wifi_setup"
            android:textSize="16sp"
            android:textColor="@color/txt_color"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/txt_preferred"
            app:layout_constraintBottom_toTopOf="@id/txt_wifi_name"
            android:layout_marginTop="16dp"
            />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wifi_name"
            app:layout_constraintTop_toBottomOf="@id/txt_preferred"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            android:id="@+id/txt_wifi_name"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            app:layout_constraintBottom_toTopOf="@id/edit_text_wifi_name"
            />


        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/txt_wifi_name"
            app:layout_constraintStart_toStartOf="@id/txt_wifi_name"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp"
            android:inputType="text"
            android:layout_marginTop="8dp"
            android:singleLine="true"
            android:background="@drawable/background_wifi_setup"
            android:padding="8dp"
            android:id="@+id/edit_text_wifi_name"
            app:layout_constraintBottom_toTopOf="@id/txt_password"
            />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            app:layout_constraintTop_toBottomOf="@id/edit_text_wifi_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            android:id="@+id/txt_password"
            android:layout_marginTop="8dp"
            android:layout_marginStart="32dp"
            app:layout_constraintBottom_toTopOf="@id/edit_text_password"
            />


        <android.support.design.widget.TextInputLayout
            android:id="@+id/edit_text_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/txt_password"
            app:layout_constraintStart_toStartOf="@id/txt_password"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp"
            app:passwordToggleEnabled="true"
           >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:background="@drawable/background_wifi_setup"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:inputType="textPassword"/>

        </android.support.design.widget.TextInputLayout>


        <TextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/cancel"
            android:id="@+id/txt_cancel"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/edit_text_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/txt_save"
            android:gravity="center"
            android:textStyle="bold"
            android:foreground="?selectableItemBackground"
            app:layout_constraintBottom_toBottomOf="parent"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/txt_save"
            android:text="@string/save"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:textStyle="bold"
            android:foreground="?selectableItemBackground"
            android:textColor="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_text_password"
            app:layout_constraintStart_toEndOf="@id/txt_cancel"
            app:layout_constraintEnd_toEndOf="parent"
            />

    </android.support.constraint.ConstraintLayout>


</android.support.v7.widget.CardView>